--- a/app/index.html
+++ b/app/index.html
@@ -54,12 +54,12 @@
 
 						<div class="phone-wrap">
 							<div class="phone">+3 (095) 12-34-567</div>
-							<a href="#" class="button toggle-mnu hidden-lg ">|||</a>
+							<a href="#" class="toggle-mnu hidden-lg "><span></span></a>
 						</div>
 						
 						
 					</div>
-					<div class="col-md-7 col-lg-pull-2">
+					<div class="col-md-12 col-lg-7 col-lg-pull-2">
 						<nav class="main-mnu">
 							<ul>
 								<li class="active"><a href="#">Главная</a></li>
