--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,19 @@
 		</div>
 		<div class="button-wrap"><div class="arrow_botoom"></div></div>
 	</header>
-	
+	<section class="homesect">
+		<div class="container">
+			<div class="row">
+				<div class="section-head col-md-10 col-md-offset-1">
+					<h2>НЕЗАВИСИМАЯ ОЦЕНКА ИМУЩЕСТВА</h2>
+					<p><strong>Определение рыночной стоимости</strong> любого актиива, или <a href="#">оценка</a> - это первый этап всех рыночных отношений. Оценка заключается в обьективном анализе обьекта с целью придания ему стоимостных характеристик, выраженых в едином денежном эквиваленте</p>
+				</div>
+			</div>
+		</div>
+		<div class="section-bottom">
+			<a href="#" class="buttons">Заказать оценку</a>
+		</div>
+	</section>
 	<div class="hidden"></div>
 
 	<!--[if lt IE 9]>
